@@ -1,0 +1,10 @@
+    ALAB:Laboratory       
+    AUTH:T. Kawano
+   REFER:Evaluation Report
+   EDATE:EVAL-DEC19
+   DDATE:DIST-JAN20
+   RDATE:
+  ENDATE:20201231
+ LIBNAME:ENDF/B-X
+  SUBLIB:INCIDENT NEUTRON DATA
+  FORMAT:ENDF-9 FORMAT
