@@ -1,3 +1,8 @@
+2019-12-15  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* tools/deceheader.cpp: new file
+	tool to patch text data in the header part
+
 2019-09-23  Toshihiko KAWANO  <kawano@lanl.gov>
 
 	* example/example3.cpp: new file
